1. fix login. 2. move auth service.